--- a/zmk-config/boards/shields/dasbob/dasbob.zmk.yml
+++ b/zmk-config/boards/shields/dasbob/dasbob.zmk.yml
@@ -4,6 +4,6 @@ id: dasbob
 name: DASBOB
 type: shield
 url: https://github.com/groooveman/dasbob
-requires: [nice_nano, nice_nano_v2, elite_c]
+requires: [pro_micro]
 features:
   - keys
